# Magrathea

./: .geminiignore  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  GEMINI.md  README.md  api.py  docker-compose.yml  magrathea.db  main.py  pyproject.toml
.github/workflows/: ci.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
alembic/: env.py
alembic/versions/: 13a352073651_initial_migration.py  554e25a7ab29_add_seed_to_map.py  5d2ff5620f7a_add_is_pregenerated_to_map.py  a154439a8865_add_island_density_to_map.py
notebooks/: README.md  playground.ipynb
src/magrathea/: api.py  database.py  main.py  templates.py
src/magrathea/maps/: api.py  map.py  rendering_engine.py  seed_maps.py  world_map.py
src/magrathea/templates/: base.html  map_form.html  map_response.html
tests/: test_api.py  test_heightmap.py  test_main.py  test_rendering_engine.py  test_timestamps.py
