[project]
name = "magrathea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "fastapi>=0.128.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "noise>=1.2.2",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "perlin-noise>=1.14",
    "pyqt6>=6.10.0",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
