[project]
name = "magrathea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "cartopy>=0.25.0",
    "fastapi>=0.128.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "noise>=1.2.2",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "perlin-noise>=1.14",
    "pillow>=12.0.0",
    "pyqt6>=6.10.0",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "prek>=0.2.25",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = [
    "noise.*",
    "perlin_noise.*",
    "cartopy.*",
    "geopandas.*",
    "matplotlib.*",
    "scipy.*",
    "shapely.*",
    "numba.*",
    "alembic.*"
]
ignore_missing_imports = true

[project.scripts]
seed-maps = "magrathea.maps.seed_maps:cli"
